Improved some stuff

--- a/src/styles/editor/TrackEditor.css
+++ b/src/styles/editor/TrackEditor.css
@@ -144,6 +144,7 @@
     border-image-slice: 2 fill;
     border-image-width: 8px;
     image-rendering: pixelated;
+    display: flex;
 }
 
 @keyframes pattern-select {
@@ -168,8 +169,26 @@
 }
 
 .track-layout .track-list .track .track-pattern .pattern-preview {
+    position: absolute;
     width: 100%;
     height: 100%;
+}
+
+.track-layout .track-list .track .track-pattern div:nth-child(1) {
+    cursor: w-resize;
+    max-width: 30px;
+    flex: 1;
+}
+
+.track-layout .track-list .track .track-pattern div:nth-child(2) {
+    cursor: grab;
+    flex: 2.5;
+}
+
+.track-layout .track-list .track .track-pattern div:nth-child(3) {
+    cursor: e-resize;
+    max-width: 30px;
+    flex: 1;
 }
 
 .track-layout .mouse-cursors {
