--- a/src/styles/editor/MidiEditor.css
+++ b/src/styles/editor/MidiEditor.css
@@ -48,7 +48,6 @@
     height: 36px;
     background-color: #6f282888;
     display: flex;
-    justify-content: space-between;
 }
 
 @keyframes note-select {
@@ -61,18 +60,18 @@
     background-color: #4a42bdb1;
 }
 
-.music-layout .piano-roll .midi-editor .note *:nth-child(1) {
+.music-layout .piano-roll .midi-editor .note div:nth-child(1) {
     cursor: w-resize;
     max-width: 30px;
     flex: 1;
 }
 
-.music-layout .piano-roll .midi-editor .note *:nth-child(2) {
+.music-layout .piano-roll .midi-editor .note div:nth-child(2) {
     cursor: grab;
     flex: 2.5;
 }
 
-.music-layout .piano-roll .midi-editor .note *:nth-child(3) {
+.music-layout .piano-roll .midi-editor .note div:nth-child(3) {
     cursor: e-resize;
     max-width: 30px;
     flex: 1;
