--- a/src/styles/editor/TrackEditor.css
+++ b/src/styles/editor/TrackEditor.css
@@ -29,7 +29,7 @@
 }
 
 .track-layout .content .track-sidebar.hidden {
-    display: none;
+    visibility: hidden;
 }
 
 .track-layout .content .track-sidebar .track {
@@ -136,7 +136,8 @@
     list-style: none;
     position: absolute;
     top: 0;
-    height: 74px;
+    height: 72px;
+    overflow: hidden;
 }
 
 .track-layout .track-list .track .track-pattern:not(.preview) {
@@ -170,8 +171,11 @@
 
 .track-layout .track-list .track .track-pattern .pattern-preview {
     position: absolute;
-    width: 100%;
-    height: 100%;
+}
+
+.track-layout .track-list .track .track-pattern .pattern-preview.overflow {
+    position: fixed;
+    z-index: -1;
 }
 
 .track-layout .track-list .track .track-pattern div:nth-child(1) {
