--- a/src/styles/editor/TrackEditor.css
+++ b/src/styles/editor/TrackEditor.css
@@ -3,26 +3,33 @@
     overflow: auto;
     display: grid;
     grid-template-rows: 20px auto 32px 1fr;
-    grid-template-columns: 1fr;
+    grid-template-columns: var(--sidebar-width) 1fr;
 }
 
 .track-layout .timeline {
     grid-row: 1 / 2;
-    grid-column: 1 / 2;
+    grid-column: 1 / 3;
     border-bottom: 3px solid #2b2b2b;
     background-color: #201010;
+}
+
+.track-layout .playback-head {
+    z-index: 5;
+    grid-row: 1 / 3;
+    grid-column: 2 / 3;
 }
 
 .track-layout .content {
     position: relative;
     grid-row: 2 / 3;
-    grid-column: 1 / 2;
+    grid-column: 1 / 3;
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: var(--sidebar-width) auto;
 }
 
 .track-layout .content .track-sidebar {
+    z-index: 10;
     margin: 0;
     padding: 0;
     background-color: #201010;
@@ -45,7 +52,7 @@
 
 .track-layout .content .track-sidebar .track .track-mixer {
     grid-row: 2 / 3;
-    grid-column: 1 / 2;
+    grid-column: 1 / 3;
     display: flex;
     align-items: center;
 }
@@ -66,11 +73,13 @@
 
 .track-layout .allotment {
     grid-row: 2 / 3;
-    grid-column: 1 / 2;
+    grid-column: 1 / 3;
     pointer-events: none;
 }
 
 .track-layout .misc {
+    grid-row: 4 / 5;
+    grid-column: 1 / 3;
     margin-top: -32px;
     min-height: 10rem;
     flex: 1;
@@ -78,6 +87,8 @@
 }
 
 .track-layout .controls {
+    grid-row: 3 / 4;
+    grid-column: 1 / 3;
     position: relative;
     padding-left: var(--sidebar-width);
     transform: translateX(calc(var(--sash-hover-size) * -0.5));
