--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,9 @@ body {
   user-select: none;
 }
 
-a, p, span {
+a,
+p,
+span {
   margin: 0;
   padding: 0;
 }
@@ -39,7 +41,9 @@ a:hover {
   color: #535bf2;
 }
 
-button {
+button,
+select {
+  padding: 1px 6px 1px 6px;
   appearance: none;
   cursor: pointer;
   background: none;
@@ -49,7 +53,16 @@ button {
   image-rendering: pixelated;
 }
 
-button:disabled {
+option {
+  all: initial;
+  font-family: sans-serif;
+}
+
+*:disabled {
   opacity: 0.5;
   cursor: not-allowed;
+}
+
+*:focus {
+  outline: 2px solid white;
 }
