--- a/src/styles/editor/MidiEditor.css
+++ b/src/styles/editor/MidiEditor.css
@@ -1,21 +1,14 @@
 .music-layout .piano-roll {
     display: grid;
     grid-template-rows: 2rem 20px auto;
-    width: 100%;
-    height: 100%;
-}
-
-.music-layout .piano-roll .content {
-    overflow: auto;
-    position: relative;
-    display: grid;
-    grid-template-columns: 26px 144px auto;
-    grid-template-rows: auto;
+    grid-template-columns: 170px 1fr;
     width: 100%;
     height: 100%;
 }
 
 .music-layout .piano-roll .toolbar {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
     display: flex;
     background: #5c2924;
     color: white;
@@ -25,8 +18,28 @@
 }
 
 .music-layout .piano-roll .timeline {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
     border-bottom: 3px solid #2b2b2b;
     background-color: #25020267;
+}
+
+.music-layout .piano-roll .playback-head {
+    z-index: 5;
+    grid-column: 2 / 3;
+    grid-row: 2 / 4;
+}
+
+.music-layout .piano-roll .content {
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
+    overflow: auto;
+    position: relative;
+    display: grid;
+    grid-template-columns: 26px 144px auto;
+    grid-template-rows: auto;
+    width: 100%;
+    height: 100%;
 }
 
 .music-layout .piano-roll .midi-editor {
