--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -24,6 +24,16 @@
     image-rendering: pixelated;
 }
 
+#home-layout #home-controls .open-icon{
+    width: 1.2rem;
+    height: auto;
+}
+
+#home-layout #home-controls .new-icon{
+    width: 1.2rem;
+    height: auto;
+}
+
 #home-layout #home-controls #open-project {
     position: relative;
     z-index: 10;
