--- a/src/styles/modal/Collaboration.css
+++ b/src/styles/modal/Collaboration.css
@@ -1,7 +1,7 @@
 .collaboration-modal {
     padding: 8px;
     display: grid;
-    grid-template-rows: 3rem auto;
+    grid-template-rows: 3rem auto auto;
     grid-template-columns: 6rem minmax(12rem, 28rem);
     image-rendering: pixelated;
     gap: 1rem;
@@ -13,7 +13,7 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    grid-row: 1 / 3;
+    grid-row: 1 / 4;
     justify-self: center;
     height: 100%;
     width: 100%;
@@ -90,4 +90,9 @@
     border-image-source: url("/src/assets/invite-link-copied.png");
     border-image-slice: 3 fill;
     border-image-width: 16px;
+}
+
+.collaboration-modal .username-input {
+    display: flex;
+    
 }
