--- a/src/styles/editor/SynthEditor.css
+++ b/src/styles/editor/SynthEditor.css
@@ -55,10 +55,11 @@
 }
 
 .synth-editor .audionode[data-type= "Oscillator"]{
-    background-color: rgb(201, 248, 157);
-    border-color: black;
-    border-width: 3px;
-    border-style: solid;
+    background-image: url('/src/assets/synth-editor/oscillator_back.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    image-rendering: pixelated;
+    filter: drop-shadow(16px 18px 14px rgba(0, 0, 10, 0.566));
 }
 
 .synth-editor .audionode[data-type= "Compressor"]{
@@ -154,4 +155,10 @@
     background-color: aquamarine;
     padding-right: 10px;
     border-right: 4px solid black;
+}
+
+.synth-editor .knob{
+    position: absolute;
+    width: 50px;
+    height: 50px;
 }
