--- a/src/styles/editor/SynthEditor.css
+++ b/src/styles/editor/SynthEditor.css
@@ -1,8 +1,8 @@
 .synth-editor{
     position: relative;
-    background-image: url("/src/assets/infinite-background-tile-center-cross-dark.png");
+    background-image: url("/src/assets/infinite-background-tile-center-cross.png");
     background-repeat: repeat;
-    background-size: 56px;
+    background-size: 88px;
     image-rendering: pixelated;
     width: 100%;
     height: 100%;
@@ -70,7 +70,7 @@
 }
 
 .synth-editor .audionode[data-type= "Envelope"]{
-    background-color: rgb(157, 222, 248);
+    background-color: rgb(248, 157, 157);
     border-color: black;
     border-width: 3px;
     border-style: solid;
@@ -152,9 +152,9 @@
     left: 0;
     height: 100%;
     
-    background-color: aquamarine;
+    background-color: rgba(52, 24, 24, 0.638);
     padding-right: 10px;
-    border-right: 4px solid black;
+    border-right: 4px solid rgba(0, 0, 0, 0.638);
 }
 
 .synth-editor .knob{
