--- a/src/styles/editor/Timeline.css
+++ b/src/styles/editor/Timeline.css
@@ -1,5 +1,7 @@
 .timeline {
-    position: relative;
+    z-index: 10;
+    top: 0;
+    position: sticky;
     margin: 0;
     padding: 0;
     list-style: none;
