--- a/src/styles/editor/SynthEditor.css
+++ b/src/styles/editor/SynthEditor.css
@@ -31,7 +31,7 @@
 
     animation: pattern-drag-begin 1s cubic-bezier(.13,1.3,.1,1) forwards;
     transition: rotate 0.1s ease-out;
-    transform-origin: left top;
+    transform-origin: center;
 }
 
 .synth-editor .audionode:hover{
