--- a/src/styles/Piano.css
+++ b/src/styles/Piano.css
@@ -9,24 +9,21 @@
     overflow: auto hidden
 }
 
-.piano[data-disabled=true] {
-    opacity: 0.3;
-    cursor: not-allowed;
-}
-
 .piano ul.keys {
     list-style-type: none;
     margin: 0;
     padding: 0;
     grid-column: 1 / 3;
     grid-row-start: 2;
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 .piano[data-orientation="horizontal"] ul.keys {
     grid-row: 1 / 3;
     grid-column: 1 / 2;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     align-items: end;
     margin-bottom: 5px;
 }
@@ -65,7 +62,7 @@
     width: 432px;
 }
 
-.piano ul.octaves .base-octave {
+.piano ul.octaves .octave.selected {
     filter: hue-rotate(90deg);
 }
 
@@ -77,7 +74,6 @@
 .piano ul.keys .black-key {
     height: 0;
     width: 0;
-    align-self: end;
 }
 
 .piano ul.keys .black-key::after {
@@ -161,34 +157,34 @@
     text-align: center;
 }
 
-.piano ul.keys .general.pressed-white {
+.piano ul.keys .general.pressed {
     background-image: url("/src/assets/piano/general-key-pressed.png");
 }
 
-.piano[data-orientation="horizontal"] ul.keys .general.pressed-white {
+.piano[data-orientation="horizontal"] ul.keys .general.pressed {
     background-image: url("/src/assets/piano/general-key-pressed-90.png");
 }
 
-.piano ul.keys .c-f.pressed-white {
+.piano ul.keys .c-f.pressed {
     background-image: url("/src/assets/piano/c-f-key-pressed.png");
 }
 
-.piano[data-orientation="horizontal"] ul.keys .c-f.pressed-white {
+.piano[data-orientation="horizontal"] ul.keys .c-f.pressed {
     background-image: url("/src/assets/piano/c-f-key-pressed-90.png");
 }
 
-.piano ul.keys .e-b.pressed-white {
+.piano ul.keys .e-b.pressed {
     background-image: url("/src/assets/piano/e-b-key-pressed.png");
 }
 
-.piano[data-orientation="horizontal"] ul.keys .e-b.pressed-white {
+.piano[data-orientation="horizontal"] ul.keys .e-b.pressed {
     background-image: url("/src/assets/piano/e-b-key-pressed-90.png");
 }
 
-.piano ul.keys .pressed-black::after {
+.piano ul.keys .black-key.pressed::after {
     background-image: url("/src/assets/piano/black-key-pressed.png");
 }
 
-.piano[data-orientation="horizontal"] ul.keys .pressed-black::after {
+.piano[data-orientation="horizontal"] ul.keys .black-key.pressed::after {
     background-image: url("/src/assets/piano/black-key-pressed-90.png");
 }
