--- a/src/styles/editor/PlaybackHead.css
+++ b/src/styles/editor/PlaybackHead.css
@@ -1,4 +1,5 @@
 .playback-head {
+    z-index: 10;
     pointer-events: none;
     position: relative;
     overflow: hidden;
@@ -20,7 +21,25 @@
     translate: -50%;
 }
 
-.playback-head .head.playing::after {
+@keyframes head-gradient-fade-in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes head-gradient-fade-out {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+.playback-head .head::after {
     content: "";
     position: absolute;
     top: 0;
@@ -28,4 +47,12 @@
     right: 50%;
     width: 40px;
     background-image: linear-gradient(90deg, #00ff0000 10%, #00ff0033 100%);
+}
+
+.playback-head .head.playing::after {
+    animation: head-gradient-fade-in 0.2s ease forwards;
+}
+
+.playback-head .head:not(.playing)::after {
+    animation: head-gradient-fade-out 0.2s ease forwards;
 }
